<resources>
    <string name="app_name">Yunance</string>
    <string name="on_board_activity_title">OnBoardActivity</string>
    <string name="yunance">Yunance</string>
    <string name="log_in_btn">LOG IN</string>
    <string name="pass_input_ttl">Password</string>
    <string name="email_input_ttl">Email</string>
    <string name="sign_up_btn">SIGN UP</string>
    <string name="name_input_ttl">Name</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails</string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="lang_switch">English/Russian</string>
</resources>